# DeArrowBrowser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  add_metadata.rs  builder_base.Dockerfile  config.toml.example
dearrow-browser-api/: Cargo.toml
dearrow-browser-api/src/: api.rs  lib.rs
dearrow-browser-frontend/: Cargo.toml  index.html  index.scss  initializer.mjs
dearrow-browser-frontend/icon/twemoji/: README.md
dearrow-browser-frontend/icon/user-agents/: README.md
dearrow-browser-frontend/js/: worker_loader.mjs
dearrow-browser-frontend/src/: app.rs  constants.rs  contexts.rs  hooks.rs  innertube.rs  main.rs  modal_renderer.rs  modals.rs  sbserver.rs  settings.rs  utils.rs  utils_app.rs  utils_common.rs  worker.rs  worker_api.rs  worker_client.rs
dearrow-browser-frontend/src/components/: async_task_manager.rs  detail_table.rs  header_footer.rs  icon.rs  links.rs  mod.rs  modals.rs  searchbar.rs  youtube.rs
dearrow-browser-frontend/src/components/modals/: async_tasks.rs  mod.rs  settings.rs  status.rs  thumbnail.rs  voting.rs
dearrow-browser-frontend/src/components/tables/: casual.rs  details.rs  macros.rs  mod.rs  remote.rs  renderer.rs  switch.rs  thumbs.rs  titles.rs  trait.rs  users.rs  warnings.rs
dearrow-browser-frontend/src/contexts/: misc.rs  mod.rs  settings.rs  theme.rs  user.rs
dearrow-browser-frontend/src/pages/: broken.rs  channel.rs  home.rs  mod.rs  unverified.rs  user.rs  username.rs  uuid.rs  video.rs
dearrow-browser-frontend/src/thumbnails/: common.rs  components.rs  local.rs  mod.rs  mod_app.rs  mod_main.rs  mod_worker.rs  remote.rs  utils.rs  worker.rs  worker_api.rs  worker_loader.mjs
dearrow-browser-frontend/src/yt_metadata/: common.rs  components.rs  local.rs  mod_app.rs  mod_worker.rs  remote.rs
dearrow-browser-server/: Cargo.toml
dearrow-browser-server/src/: constants.rs  innertube.rs  main.rs  middleware.rs  routes.rs  sbserver_emulation.rs  state.rs  utils.rs
dearrow-browser-server/src/errors/: mod.rs
dearrow-browser-server/src/errors/extensions/: empty_body.rs  mod.rs  no_timings.rs  status.rs
dearrow-browser-server/src/middleware/: custom_status.rs  errors.rs  etag.rs  mod.rs  timings.rs
dearrow-browser-server/static/: index.html
dearrow-parser/: Cargo.toml
dearrow-parser/src/: db.rs  dedupe.rs  errors.rs  lib.rs  types.rs
dearrow-parser/src/csv/: mod.rs  parsing.rs  types.rs
error_handling/: Cargo.toml  README.md
error_handling/src/: context.rs  iterator.rs  lib.rs  serializable.rs
src/: api_models.rs  lib.rs  main.rs  routes.rs  state.rs  utils.rs
