[workspace]
members = ["dearrow-browser-server", "dearrow-browser-api", "dearrow-parser", "dearrow-browser-frontend", "error_handling"]
resolver = "2"

[workspace.package]
version = "1.11.0"
homepage = "https://dearrow.minibomba.pro"
repository = "https://github.com/mini-bomba/DeArrowBrowser"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
built = { version = "0.7.1", features = ["git2", "chrono"] }
enumflags2 = "0.7.8"
futures = { version = "0.3.30", default-features = false, features = ["std", "async-await"] }
log = "0.4.21"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive", "rc"] }
sha2 = "0.10.8"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
# lints that aren't compatible with what I'm doing
struct_field_names = "allow"      # triggers on things like "username" in the Username struct or "title" on Title
struct_excessive_bools = "allow"  # false positives
# personal code style preferences
single_match_else = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
# might enable these later
must_use_candidate = "allow"
missing_errors_doc = "allow"      # no docs currently
missing_panics_doc = "allow"      # no docs currently
# let me do dumb shit
inline_always = "allow"

[profile.release]
strip = true
lto = true
