[workspace]
members = ["dearrow-browser-server", "dearrow-browser-api", "dearrow-parser", "dearrow-browser-frontend"]
resolver = "2"

[workspace.package]
version = "1.15.1"
homepage = "https://dearrow.minibomba.pro"
repository = "https://github.com/mini-bomba/DeArrowBrowser"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
built = { version = "0.8.0", features = ["git2", "chrono"] }
chrono = { version = "0.4.41", default-features = false }
cloneable_errors = { version = "2.0.1", features = ["serde"] }
enumflags2 = "0.7.10"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
git2 = { version = "0.20.2", default-features = false }
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
sha2 = "=0.11.0-pre.5"
strum = { version = "0.27.1", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
# lints that aren't compatible with what I'm doing
struct_field_names = "allow"      # triggers on things like "username" in the Username struct or "title" on Title
struct_excessive_bools = "allow"  # false positives
# personal code style preferences
single_match_else = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
# might enable these later
must_use_candidate = "allow"
missing_errors_doc = "allow"      # no docs currently
missing_panics_doc = "allow"      # no docs currently
# let me do dumb shit
inline_always = "allow"
too_many_lines = "allow"  # there's no such thing as a function with too many lines

[profile.release]
strip = true
lto = "thin"

[profile.dev]
opt-level = 1
strip = false
