[workspace]
members = ["dearrow-browser-server", "dearrow-browser-api", "dearrow-parser", "dearrow-browser-frontend"]
resolver = "2"

[workspace.package]
version = "1.17.3"
homepage = "https://dearrow.minibomba.pro"
repository = "https://github.com/mini-bomba/DeArrowBrowser"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
built = { version = "0.8.0", features = ["git2", "chrono"] }
chrono = { version = "0.4.42", default-features = false }
cloneable_errors = { version = "2.3.0", features = ["serde"] }
enumflags2 = "0.7.12"
futures = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
git2 = { version = "0.20.2", default-features = false }
log = "0.4.28"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sha2 = "=0.11.0-rc.3"
strum = { version = "0.27.2", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
todo = "warn"
# lints that aren't compatible with what I'm doing
struct_field_names = "allow"      # triggers on things like "username" in the Username struct or "title" on Title
struct_excessive_bools = "allow"  # false positives
# personal code style preferences
single_match_else = "allow"
wildcard_imports = "allow"
module_name_repetitions = "allow"
# might enable these later
must_use_candidate = "allow"
missing_errors_doc = "allow"      # no docs currently
missing_panics_doc = "allow"      # no docs currently
# let me do dumb shit
inline_always = "allow"
too_many_lines = "allow"  # there's no such thing as a function with too many lines

[profile.release]
strip = true
lto = "thin"

[profile.dev]
opt-level = 1
strip = false
