[package]
name = "dearrow-browser-api"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dearrow-parser = { path = "../dearrow-parser", optional = true }
serde.workspace = true
