[package]
name = "dearrow-browser-api"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["sync"]
# Arc<str> implementation (default)
sync = []
# Rc<str> implementation
unsync = []
# Box<> implementation
boxed = []
# String implementation
string = []
# from dearrow-parser types traits
dearrow-parser = ["dep:dearrow-parser", "dep:strum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dearrow-parser = { path = "../dearrow-parser", optional = true }
strum = { workspace = true, optional = true }
serde.workspace = true
indexmap = { version = "2.10.0", features = ["serde"] }
