[package]
name = "dearrow-browser-frontend"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
build = "../add_metadata.rs"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.35", default-features = false, features = ["wasmbind", "alloc", "clock"] }
dearrow-browser-api = { path = "../dearrow-browser-api", default-features = false, features = ["unsync"] }
error_handling = { path = "../error_handling", features = ["serde"] }
futures.workspace = true
gloo-console = "0.3.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
slab = "0.4.9"
strum = { version = "0.25.0", features = ["derive"] }
wasm-bindgen = "= 0.2.93" # current version in alpine repos
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"

[dependencies.web-sys]
version = "0.3.66"
features = [
  "AbortController",
  "AbortSignal",
  "AddEventListenerOptions",
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "Headers",
  "HtmlInputElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MessagePort",
  "ValidityState",
  "Window",
  "WorkerGlobalScope",
  "WorkerOptions",
  "WorkerType",
  "PageTransitionEvent",
  "Response",
  "SharedWorker",
  "SharedWorkerGlobalScope",
  "Url",
]

[build-dependencies]
built.workspace = true

[[bin]]
name="app"
path="src/main.rs"

[[bin]]
name="thumbnails_worker"
path="src/thumbnails/worker.rs"
