[package]
name = "dearrow-browser-frontend"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
build = "../add_metadata.rs"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
chrono = { workspace = true, features = ["wasmbind", "alloc", "clock"] }
cloneable_errors = { workspace = true, features = ["bincode"] }
dearrow-browser-api = { path = "../dearrow-browser-api", default-features = false, features = ["unsync"] }
enumflags2.workspace = true
futures.workspace = true
gloo-console = "0.3.0"
percent-encoding = "2.3.2"
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slab = "0.4.9"
strum.workspace = true
wasm-bindgen = "= 0.2.104" # current version in alpine repos
wasm-bindgen-futures = "0.4.50"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.3"

[dependencies.web-sys]
version = "0.3.66"
features = [
  "AbortController",
  "AbortSignal",
  "AddEventListenerOptions",
  "Blob",
  "ClipboardEvent",
  "DataTransfer",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "Headers",
  "HtmlInputElement",
  "HtmlSelectElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "MessagePort",
  "ValidityState",
  "Window",
  "WorkerGlobalScope",
  "WorkerOptions",
  "WorkerType",
  "PageTransitionEvent",
  "Response",
  "SharedWorker",
  "SharedWorkerGlobalScope",
  "Url",
]

[build-dependencies]
built.workspace = true
chrono.workspace = true
cloneable_errors = { workspace = true, features = [] }
git2.workspace = true

[[bin]]
name="app"
path="src/app.rs"

[[bin]]
name="worker"
path="src/worker.rs"
