[package]
name = "dearrow-parser"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
csv = "1.3.0"
enumflags2.workspace = true
serde.workspace = true
