[package]
name = "dearrow-parser"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
error_handling = { path = "../error_handling" }
enumflags2.workspace = true
serde.workspace = true
sha2.workspace = true
log.workspace = true
