[package]
name = "dearrow-parser"
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloneable_errors.workspace = true
csv = "1.4.0"
enumflags2.workspace = true
serde.workspace = true
sha2.workspace = true
strum.workspace = true
log.workspace = true
enum-map = "2.7.3"
